--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+
+.thumb-btn {
+  -webkit-user-select: none;
+  /* Safari */
+  -ms-user-select: none;
+  /* IE 10 and IE 11 */
+  user-select: none;
+  /* Standard syntax */
+}
